--- a/TCP_server/TCP_server.xcodeproj/xcshareddata/xcschemes/TCP_server.xcscheme
+++ b/TCP_server/TCP_server.xcodeproj/xcshareddata/xcschemes/TCP_server.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "65958AB91FF3D96A00C0DACB"
-               BuildableName = "Battleship"
-               BlueprintName = "Battleship"
-               ReferencedContainer = "container:Battleship.xcodeproj">
+               BlueprintIdentifier = "653B51D02004ABE400BD07D7"
+               BuildableName = "TCP_server"
+               BlueprintName = "TCP_server"
+               ReferencedContainer = "container:TCP_server.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "65958AB91FF3D96A00C0DACB"
-            BuildableName = "Battleship"
-            BlueprintName = "Battleship"
-            ReferencedContainer = "container:Battleship.xcodeproj">
+            BlueprintIdentifier = "653B51D02004ABE400BD07D7"
+            BuildableName = "TCP_server"
+            BlueprintName = "TCP_server"
+            ReferencedContainer = "container:TCP_server.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
       <AdditionalOptions>
@@ -55,10 +55,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "65958AB91FF3D96A00C0DACB"
-            BuildableName = "Battleship"
-            BlueprintName = "Battleship"
-            ReferencedContainer = "container:Battleship.xcodeproj">
+            BlueprintIdentifier = "653B51D02004ABE400BD07D7"
+            BuildableName = "TCP_server"
+            BlueprintName = "TCP_server"
+            ReferencedContainer = "container:TCP_server.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
@@ -74,10 +74,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "65958AB91FF3D96A00C0DACB"
-            BuildableName = "Battleship"
-            BlueprintName = "Battleship"
-            ReferencedContainer = "container:Battleship.xcodeproj">
+            BlueprintIdentifier = "653B51D02004ABE400BD07D7"
+            BuildableName = "TCP_server"
+            BlueprintName = "TCP_server"
+            ReferencedContainer = "container:TCP_server.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
